[add] github pages : ajout example

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-RAS
+<!DOCTYPE html>
+<html lang="fr">
+<head>  
+<meta charset="utf-8">
+<title>RAS - Responsive Accessible Slider</title>
+<script src="http://code.jquery.com/jquery-1.4.4.min.js" type="text/javascript"></script>
+<script src="RAS.js" type="text/javascript"></script>
+<script src="ready.js" type="text/javascript"></script>
+<link type="text/css" rel="stylesheet" media="all" href="style.css" />
+
+</head>
+<body>
+  <ul>
+    <li><a href="testcarousel">Test Carousel with 1 element visible responsive</a></li>
+    <li><a href="testcarouselby3">Test Carousel by 3</a></li>
+    <li><a href="testcarouselFade">Test Carousel anim Fade</a></li>
+    <li><a href="testRasBase">Test Carousel RAs base</a></li>
+    <li><a href="testRasBaseButtExt">Test Ras base with external action</a></li>
+    <li><a href="testRasBaseNav">Test Ras with nav</a></li>
+    <li><a href="testRasBaseNavCarousel">Test Ras with nav + Carousel</a></li>
+  </ul>
+</body>
+</html>
