--- a/testcarousel/index.html
+++ b/testcarousel/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>RAS - Responsive Accessible Slider</title>
 <script src="http://code.jquery.com/jquery-1.4.4.min.js" type="text/javascript"></script>
-<script src="../RAS.js" type="text/javascript"></script>
+<script src="https://raw.github.com/thomaslebeau/ras/master/RAS.js" type="text/javascript"></script>
 <script src="ready.js" type="text/javascript"></script>
 <link type="text/css" rel="stylesheet" media="all" href="style.css" />
 
