--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
 <script src="http://code.jquery.com/jquery-1.4.4.min.js" type="text/javascript"></script>
 <script src="https://raw.github.com/thomaslebeau/ras/master/ras.js" type="text/javascript"></script>
 <script src="ready.js" type="text/javascript"></script>
-<link type="text/css" rel="stylesheet" media="all" href="style.css" />
+<link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
+<link rel="stylesheet/less" type="text/css" href="less/style.less" />
+<script src="https://raw.github.com/cloudhead/less.js/master/dist/less-1.3.3.min.js" type="text/javascript"></script>
 
 </head>
 <body>
+  <h1>R.A.S. : Responsive Accessible Slideshow</h1>
+  <ul id="slideshow">
+    <li><img src="img/500.jpeg" alt="image de chaton tout mignon" /></li>
+    <li><img src="img/500chat.jpg" alt="une autre image de chaton tout mignon" /></li>
+    <li><img src="img/500chat2.jpg" alt="désolé c'est encore un chaton" /></li>
+  </ul>
+  <!-- 
   <ul>
     <li><a href="testcarousel">Test Carousel with 1 element visible responsive</a></li>
     <li><a href="testcarouselby3">Test Carousel by 3</a></li>
@@ -19,5 +28,6 @@
     <li><a href="testRasBaseNav">Test Ras with nav</a></li>
     <li><a href="testRasBaseNavCarousel">Test Ras with nav + Carousel</a></li>
   </ul>
+   -->
 </body>
 </html>
