--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <pre>&lt;script src="ras.min.js" type="text/javascript"&gt;&lt;/script&gt;
 &lt;script type="text/javascript"&gt;
   $.fn.ready(function(){
-    $('#slideshow').RAS();
+    $('#slideshow').ras();
   });
 &lt;/script&gt;</pre>
   </div>
