--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <title>RAS - Responsive Accessible Slider</title>
 <script src="http://code.jquery.com/jquery-1.4.4.min.js" type="text/javascript"></script>
 <script src="https://raw.github.com/thomaslebeau/ras/master/ras.js" type="text/javascript"></script>
+<script src="https://raw.github.com/thomaslebeau/ras/master/ras.auto.js" type="text/javascript"></script>
+<script src="https://raw.github.com/thomaslebeau/ras/master/ras.carousel.js" type="text/javascript"></script>
 <script src="ready.js" type="text/javascript"></script>
 <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet/less" type="text/css" href="less/style.less" />
@@ -26,17 +28,63 @@
     $('#slideshow').ras();
   });
 &lt;/script&gt;</pre>
+    <div>
+      <h3>Options de ras</h3>
+      <pre>
+$('#slideshow').ras({
+  duration:400, //durée du slide
+  textPrev:'prev', //texte pour le bouton prev
+  textNext:'next' //texte pour le bouton next
+});
+</pre>
+    </div>
+    <h2 id="autoslide">Ras Autoslide</h2>
+    <ul id="slideshowAuto">
+      <li><img src="img/500.jpeg" alt="image de chaton tout mignon" /></li>
+      <li><img src="img/500chat.jpg" alt="une autre image de chaton tout mignon" /></li>
+      <li><img src="img/500chat2.jpg" alt="désolé c'est encore un chaton" /></li>
+    </ul>
+    <pre>&lt;script src="ras-auto.min.js" type="text/javascript"&gt;&lt;/script&gt;
+&lt;script type="text/javascript"&gt;
+  $.fn.ready(function(){
+    $('#slideshow').ras().autoslide();
+  });
+&lt;/script&gt;</pre>
+  <div>
+      <h3>Options d'autoslide</h3>
+      <pre>
+$('#slideshow').ras().autoslide({
+  time:2000, //durée entre chaque slide
+  textPlay:'play', //texte pour le bouton play
+  textStop:'stop' //texte pour le bouton stop
+});
+</pre>
+    </div>
+  <h2 id="carousel">Ras Carousel</h2>
+    <ul id="slideshowCarousel">
+      <li><img src="img/500.jpeg" alt="image de chaton tout mignon" /></li>
+      <li><img src="img/500chat.jpg" alt="une autre image de chaton tout mignon" /></li>
+      <li><img src="img/500chat2.jpg" alt="désolé c'est encore un chaton" /></li>
+      <li><img src="img/500chat3min.png" alt="une autre image de chaton tout mignon" /></li>
+      <li><img src="img/500chat4min.png" alt="image de chaton tout mignon" /></li>
+      <li><img src="img/500chat5min.png" alt="image de chaton tout mignon" /></li>
+    </ul>
+    <pre>&lt;script src="ras-auto.min.js" type="text/javascript"&gt;&lt;/script&gt;
+&lt;script type="text/javascript"&gt;
+  $.fn.ready(function(){
+    $('#slideshow').ras().carousel();
+  });
+&lt;/script&gt;</pre>
+<div>
+      <h3>Options de carousel</h3>
+      <pre>
+$('#slideshow').ras().carousel({
+  number:3, //groupe par n éléments (ici 3)
+  oneVisible:'play', //slide 1 par 1 et laisse 1 de visible pour le responsive
+});
+</pre>
+    </div> 
   </div>
-  <!-- 
-  <ul>
-    <li><a href="testcarousel">Test Carousel with 1 element visible responsive</a></li>
-    <li><a href="testcarouselby3">Test Carousel by 3</a></li>
-    <li><a href="testcarouselFade">Test Carousel anim Fade</a></li>
-    <li><a href="testRasBase">Test Carousel RAs base</a></li>
-    <li><a href="testRasBaseButtExt">Test Ras base with external action</a></li>
-    <li><a href="testRasBaseNav">Test Ras with nav</a></li>
-    <li><a href="testRasBaseNavCarousel">Test Ras with nav + Carousel</a></li>
-  </ul>
-   -->
+   
 </body>
 </html>
