updage gh-pages

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ $('#slideshow').ras().autoslide({
       <pre>
 $('#slideshow').ras().carousel({
   number:3, //groupe par n éléments (ici 3)
-  oneVisible:'play', //slide 1 par 1 et laisse 1 de visible pour le responsive
+  oneVisible:false, //slide 1 par 1 et laisse 1 de visible pour le responsive
 });
 </pre>
     </div> 
