[add] link download

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 <body>
   <div id="wrapper">
     <h1>R.A.S. : Responsive Accessible Slideshow</h1>
+    <div class="container-btn">
+      <a target="_blank" title="Nouvelle fenêtre : Code de Responsive Accessible Slideshow minifié" href="https://raw.github.com/thomaslebeau/ras/master/ras.min.js">Téléchargez ras.min.js</a>
+      <a target="_blank" title="Nouvelle fenêtre : Repo Github du plugin Responsive Accessible Slideshow" href="https://github.com/thomaslebeau/ras">Accéder au repo Github</a>
+    </div>
     <ul id="slideshow">
       <li><img src="img/500.jpeg" alt="image de chaton tout mignon" /></li>
       <li><img src="img/500chat.jpg" alt="une autre image de chaton tout mignon" /></li>
@@ -39,6 +43,9 @@ $('#slideshow').ras({
 </pre>
     </div>
     <h2 id="autoslide">Ras Autoslide</h2>
+    <div class="container-btn">
+      <a target="_blank" title="Nouvelle fenêtre : Code de Autoslide minifié" href="https://raw.github.com/thomaslebeau/ras/master/ras.autoslide.min.js">Téléchargez ras.autoslide.min.js</a>
+    </div>
     <ul id="slideshowAuto">
       <li><img src="img/500.jpeg" alt="image de chaton tout mignon" /></li>
       <li><img src="img/500chat.jpg" alt="une autre image de chaton tout mignon" /></li>
@@ -61,6 +68,9 @@ $('#slideshow').ras().autoslide({
 </pre>
     </div>
   <h2 id="carousel">Ras Carousel</h2>
+    <div class="container-btn">
+      <a target="_blank" title="Nouvelle fenêtre : Code de Carousel minifié" href="https://raw.github.com/thomaslebeau/ras/master/ras.carousel.min.js">Téléchargez ras.carousel.min.js</a>
+    </div>
     <ul id="slideshowCarousel">
       <li><img src="img/500.jpeg" alt="image de chaton tout mignon" /></li>
       <li><img src="img/500chat.jpg" alt="une autre image de chaton tout mignon" /></li>
@@ -84,6 +94,10 @@ $('#slideshow').ras().carousel({
 });
 </pre>
     </div> 
+    <div class="container-btn">
+      <a target="_blank" title="Nouvelle fenêtre : Code de Responsive Accessible Slideshow minifié" href="https://raw.github.com/thomaslebeau/ras/master/ras.min.js">Téléchargez ras.min.js</a>
+      <a target="_blank" title="Nouvelle fenêtre : Repo Github du plugin Responsive Accessible Slideshow" href="https://github.com/thomaslebeau/ras">Accéder au repo Github</a>
+    </div>
   </div>
    
 </body>
