--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@ $('#slideshow').ras().carousel({
 });
 </pre>
     </div> 
-    <div class="container-btn">
+    <div class="container-btn mt">
       <a target="_blank" title="Nouvelle fenêtre : Code de Responsive Accessible Slideshow minifié" href="https://raw.github.com/thomaslebeau/ras/master/ras.min.js">Téléchargez ras.min.js</a>
       <a target="_blank" title="Nouvelle fenêtre : Repo Github du plugin Responsive Accessible Slideshow" href="https://github.com/thomaslebeau/ras">Accéder au repo Github</a>
     </div>
   </div>
    
 </body>
-</html>ml>
+</html>
