[fix] bug link ras auto min

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ $('#slideshow').ras({
     </div>
     <h2 id="autoslide">Ras Autoslide</h2>
     <div class="container-btn">
-      <a target="_blank" title="Nouvelle fenêtre : Code de Autoslide minifié" href="https://raw.github.com/thomaslebeau/ras/master/ras.autoslide.min.js">Téléchargez ras.autoslide.min.js</a>
+      <a target="_blank" title="Nouvelle fenêtre : Code de Autoslide minifié" href="https://raw.github.com/thomaslebeau/ras/master/ras.auto.min.js">Téléchargez ras.auto.min.js</a>
     </div>
     <ul id="slideshowAuto">
       <li><img src="img/500.jpeg" alt="image de chaton tout mignon" /></li>
