--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <meta charset="utf-8">
 <title>RAS - Responsive Accessible Slider</title>
 <script src="http://code.jquery.com/jquery-1.4.4.min.js" type="text/javascript"></script>
-<script src="https://raw.github.com/thomaslebeau/ras/master/ras.js" type="text/javascript"></script>
-<script src="https://raw.github.com/thomaslebeau/ras/master/ras.auto.js" type="text/javascript"></script>
-<script src="https://raw.github.com/thomaslebeau/ras/master/ras.carousel.js" type="text/javascript"></script>
+<script src="https://rawgithub.com/thomaslebeau/ras/master/ras.js" type="text/javascript"></script>
+<script src="https://rawgithub.com/thomaslebeau/ras/master/ras.auto.js" type="text/javascript"></script>
+<script src="https://rawgithub.com/thomaslebeau/ras/master/ras.carousel.js" type="text/javascript"></script>
 <script src="ready.js" type="text/javascript"></script>
 <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet/less" type="text/css" href="less/style.less" />
-<script src="https://raw.github.com/cloudhead/less.js/master/dist/less-1.3.3.min.js" type="text/javascript"></script>
+<script src="https://rawgithub.com/cloudhead/less.js/master/dist/less-1.3.3.min.js" type="text/javascript"></script>
 
 </head>
 <body>
