[add] maj gh-pages ajout duree autoslide

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@ $('#slideshow').ras({
 $('#slideshow').ras().autoslide({
   time:2000, //durée entre chaque slide
   textPlay:'play', //texte pour le bouton play
-  textStop:'stop' //texte pour le bouton stop
+  textStop:'stop', //texte pour le bouton stop
+  duration:400 //durée du slide
 });
 </pre>
     </div>
