--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@ $('#slideshow').ras({
       <li><img src="img/500chat.jpg" alt="une autre image de chaton tout mignon" /></li>
       <li><img src="img/500chat2.jpg" alt="désolé c'est encore un chaton" /></li>
     </ul>
-    <pre>&lt;script src="ras-auto.min.js" type="text/javascript"&gt;&lt;/script&gt;
+    <pre>&lt;script src="ras.min.js" type="text/javascript"&gt;&lt;/script&gt;
+&lt;script type="text/javascript"&gt;
+&lt;script src="ras-auto.min.js" type="text/javascript"&gt;&lt;/script&gt;
 &lt;script type="text/javascript"&gt;
   $.fn.ready(function(){
     $('#slideshow').ras().autoslide();
@@ -80,7 +82,9 @@ $('#slideshow').ras().autoslide({
       <li><img src="img/500chat4min.png" alt="image de chaton tout mignon" /></li>
       <li><img src="img/500chat5min.png" alt="image de chaton tout mignon" /></li>
     </ul>
-    <pre>&lt;script src="ras-auto.min.js" type="text/javascript"&gt;&lt;/script&gt;
+    <pre>&lt;script src="ras.min.js" type="text/javascript"&gt;&lt;/script&gt;
+&lt;script type="text/javascript"&gt;
+&lt;script src="ras-auto.min.js" type="text/javascript"&gt;&lt;/script&gt;
 &lt;script type="text/javascript"&gt;
   $.fn.ready(function(){
     $('#slideshow').ras().carousel();
