[add] maj page github

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@ $('#slideshow').ras({
     </ul>
     <pre>&lt;script src="ras.min.js" type="text/javascript"&gt;&lt;/script&gt;
 &lt;script src="ras.auto.min.js" type="text/javascript"&gt;&lt;/script&gt;
->>>>>>> [add] maj page github
 &lt;script type="text/javascript"&gt;
   $.fn.ready(function(){
     $('#slideshow').ras().autoslide();
@@ -108,22 +107,19 @@ $('#slideshow').ras().carousel({
       <li><img src="img/500chat.jpg" alt="une autre image de chaton tout mignon" /></li>
       <li><img src="img/500chat2.jpg" alt="désolé c'est encore un chaton" /></li>
     </ul>
-    <pre>&lt;script src="ras.nav.min.js" type="text/javascript"&gt;&lt;/script&gt;
+    <pre>&lt;script src="ras.min.js" type="text/javascript"&gt;&lt;/script&gt;
+&lt;script src="ras.nav.min.js" type="text/javascript"&gt;&lt;/script&gt;
 &lt;script type="text/javascript"&gt;
   $.fn.ready(function(){
     $('#slideshow').ras().nav();
   });
 &lt;/script&gt;</pre>
     
+    <h2>Télécharger RAS</h2>
     <div class="container-btn mt">
       <a target="_blank" title="Nouvelle fenêtre : Code de Responsive Accessible Slideshow minifié" href="https://raw.github.com/thomaslebeau/ras/master/ras.min.js">Téléchargez ras.min.js</a>
       <a target="_blank" title="Nouvelle fenêtre : Repo Github du plugin Responsive Accessible Slideshow" href="https://github.com/thomaslebeau/ras">Accéder au repo Github</a>
     </div>
-  </div>
-   
-</body>
-</html>
-/div>
   </div>
    
 </body>
